<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_select_server"
            android:icon="@drawable/ic_nb_server"
            android:title="@string/strSelectServer" />
        <item
            android:id="@+id/nav_connection_history"
            android:icon="@drawable/ic_history"
            android:title="@string/lblConnHistory" />
        <item
            android:id="@+id/nav_usage"
            android:icon="@drawable/ic_nb_usage"
            android:title="@string/lblUsageHistory" />
        <item
            android:id="@+id/nav_network"
            android:icon="@drawable/ic_nb_network_check"
            android:title="@string/lblSpeedTest" />
        <item
            android:id="@+id/nav_logs"
            android:icon="@drawable/ic_nb_logs"
            android:title="@string/lblLogs" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nb_settings"
            android:title="@string/lblSettings" />
    </group>
</menu>