<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/layoutNoItemFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding16"
        tools:ignore="UselessParent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imgConnect"
            android:layout_width="@dimen/padding170"
            android:layout_height="@dimen/padding170"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/no_result" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding10"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/lblNoResult"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/noItemMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding4"
            android:text="@string/lblNoPostFound"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textSize18"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding4"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/padding16"
                android:layout_height="@dimen/padding16"
                android:layout_marginEnd="@dimen/padding4"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_refresh"
                app:tint="@color/colorPrimary700" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/lblTapToRetry"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/colorPrimary700" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
