<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/strSelectServer"
            app:titleTextColor="@color/colorWhite" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding16"
        android:layout_marginTop="@dimen/padding16"
        android:layout_marginEnd="@dimen/padding16"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtFreeServers"
            style="@style/selectedTextViewStyle"
            android:layout_marginEnd="@dimen/padding5"
            android:background="@drawable/rounded_border_text"
            android:text="@string/strFreeServer" />

        <TextView
            android:id="@+id/txtPremiumServers"
            style="@style/normalTextViewStyle"
            android:layout_marginStart="@dimen/padding5"
            android:background="@drawable/rounded_border"
            android:text="@string/strFasterServer" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/adsBottomView"
            android:layout_marginTop="@dimen/padding16" />

        <LinearLayout
            android:id="@+id/adsBottomView"
            style="@style/adsBottomStyle" />
    </RelativeLayout>

</LinearLayout>